--- a/app/views/copain/cards.html.erb
+++ b/app/views/copain/cards.html.erb
@@ -1,8 +1,9 @@
 <div class="text-center m-5">
   <h1>Liste des événements</h1>
+  <%# Liste des évènements %>
   <div class="container my-5 pr-0 d-flex justify-content-around flex-wrap">
     <% 15.times do %>
-      <div class="card p-2 m-2 text-white bg-secondary" style="width: 21rem;">
+      <div class="card p-2 m-2 text-white bg-success" style="width: 21rem;">
         <img class="card-img-top" src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" alt="Damn...">
         <div class="card-body text-center">
           <h4 class="card-title">
@@ -17,67 +18,28 @@
     <% end %>
   </div>
 </div>
+<%# Liste des users version cards %>
 <div class="text-center m-5">
   <h1>Liste des participants à un événement</h1>
   <div class="container-fluid my-3 pr-0 mt-5">
-    <% 3.times do %>
+    <% 5.times do %>
       <div class="card py-0 m-2 text-white bg-secondary">
         <div class="card-body d-flex justify-content-between align-content-center">
-          <img class"" src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
+          <img src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
           <p class="card-text">
             Nom Prénom
           </p>
           <p class="card-text">Ville</p>
           <p class="card-text">???</p>
           <p class="card-text">Démarre le : gnagnagna</p>
-          <%= link_to "Voir profil", root_path, :class =>"btn btn-primary"  %>
+          <%= link_to "Voir profil", root_path, :class =>"btn btn-dark"  %>
         </div>
       </div>
     <% end %>
-    <% 3.times do %>
-      <div class="card py-0 m-2 text-white bg-info">
-        <div class="card-body d-flex justify-content-between align-content-center">
-          <p class="card-text">
-            Nom Prénom
-          </p>
-          <p class="card-text">Ville</p>
-          <p class="card-text">???</p>
-          <p class="card-text">Démarre le : gnagnagna</p>
-          <%= link_to "Voir profil", root_path, :class =>"btn btn-primary"  %>
-        </div>
-      </div>
-    <% end %>
-    <% 3.times do %>
-      <div class="card py-0 m-2 text-white bg-success">
-        <div class="card-body d-flex justify-content-around">
-          <img class"" src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
-          <p class="card-text">
-            Nom Prénom
-          </p>
-          <p class="card-text">Ville</p>
-          <p class="card-text">???</p>
-          <p class="card-text">Démarre le : gnagnagna</p>
-          <%= link_to "Voir profil", root_path, :class =>"btn btn-light"  %>
-        </div>
-      </div>
-    <% end %>
-    <% 3.times do %>
-      <div class="card py-0 m-2 text-white bg-warning">
-        <div class="card-body d-flex justify-content-around align-content-center">
-          <p class="card-text">
-            Nom Prénom
-          </p>
-          <p class="card-text">Ville</p>
-          <p class="card-text">???</p>
-          <p class="card-text">Démarre le : gnagnagna</p>
-          <%= link_to "Voir profil", root_path, :class =>"btn btn-info"  %>
-        </div>
-      </div>
-    <% end %>
-    <% 3.times do %>
+    <% 5.times do %>
       <div class="card py-0 m-2 bg-light">
         <div class="card-body d-flex justify-content-around align-content-center">
-          <img class"" src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
+          <img src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
           <p class="card-text">
             Nom Prénom
           </p>
@@ -90,20 +52,85 @@
     <% end %>
   </div>
 </div>
-<div class="m-5 text-center">
-  <h1>Liste des villes</h1>
-  <div class="container my-5 pr-0 d-flex justify-content-around align-content-around flex-wrap">
-    <% 15.times do %>
-      <div class="card p-2  m-2 text-white bg-info" style="width: 28rem;">
-        <img class="card-img-top" src="https://cdn.pixabay.com/photo/2014/05/03/01/04/city-336708_960_720.jpg" alt="Damn...">
-        <div class="card-body text-center">
-          <h4 class="card-title">
-            Nom de la ville
-          </h4>
-          <p class="card-text">Zip code : XX XXX-XXXXX</p>
-          <%= link_to "Voir la ville", root_path, :class =>"btn btn-dark"  %>
-        </div>
-      </div>
-    <% end %>
+<%# Liste des users version table %>
+<div class="container">
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Profil</th>
+        <th scope="col">Identité</th>
+        <th scope="col">???</th>
+        <th scope="col">Profil pic</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% 3.times do %>
+        <tr class="table-primary text-white">
+          <td>
+            <%= link_to "Voir le profil", root_path, :class =>"btn btn-dark"  %>
+          </td>
+          <td>Nom/prénom</td>
+          <td>???</td>
+          <td>
+            <img src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
+          </td>
+        </tr>
+      <% end %>
+      <tr>
+        <% 3.times do %>
+          <tr class="table-dark">
+            <td>
+              <%= link_to "Voir le profil", root_path, :class =>"btn btn-dark"  %>
+            </td>
+            <td>Nom/prénom</td>
+            <td>???</td>
+            <td>
+              <img src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
+            </td>
+          </tr>
+        <% end %>
+        <% 3.times do %>
+          <tr class="table-secondary text-white">
+            <td>
+              <%= link_to "Voir le profil", root_path, :class =>"btn btn-dark"  %>
+            </td>
+            <td>Nom/prénom</td>
+            <td>???</td>
+            <td>
+              <img src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
+            </td>
+          </tr>
+        <% end %>
+        <% 3.times do %>
+          <tr class="table-light">
+            <td>
+              <%= link_to "Voir le profil", root_path, :class =>"btn btn-dark"  %>
+            </td>
+            <td>Nom/prénom</td>
+            <td>???</td>
+            <td>
+              <img src="https://cdn.pixabay.com/photo/2014/03/26/20/54/mountain-298999_960_720.jpg" width="50px" alt="" class="mr-2 rounded">
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
-</div>
+  <%# Liste des villes  %>
+  <div class="m-5 text-center">
+    <h1>Liste des villes</h1>
+    <div class="container my-5 pr-0 d-flex justify-content-around align-content-around flex-wrap">
+      <% 15.times do %>
+        <div class="card p-2  m-2 text-white bg-info" style="width: 28rem;">
+          <img class="card-img-top" src="https://cdn.pixabay.com/photo/2014/05/03/01/04/city-336708_960_720.jpg" alt="Damn...">
+          <div class="card-body text-center">
+            <h4 class="card-title">
+              Nom de la ville
+            </h4>
+            <p class="card-text">Zip code : XX XXX-XXXXX</p>
+            <%= link_to "Voir la ville", root_path, :class =>"btn btn-dark"  %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
