--- a/app/views/copain/forgot_password.html.erb
+++ b/app/views/copain/forgot_password.html.erb
@@ -1,9 +1,10 @@
 <!-- Formulaires -->
+<html></html>
 <body>
-  <div class="container d-flex justify-content-center">
-    <form class="w-50 my-5 p-3">
+  <div class="container d-flex justify-content-center align-items-center" style="height:80vh" >
+    <form class="w-50 my-5 p-5 bg-secondary text-white rounded text-center">
       <fieldset>
-        <legend>Inscription/Connexion</legend>
+        <legend>Mot de passe oublié ?</legend>
         <div class="form-group row">
         </div>
         <div class="form-group">
@@ -11,85 +12,10 @@
           <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Donne ton mail là !">
           <small id="emailHelp" class="form-text text-muted">Nous ne partagerons votre email à personne, jamais.</small>
         </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Mot de passe</label>
-          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-        </div>
-        <div class="form-group">
-          <label for="exampleSelect1">Ville</label>
-          <select class="form-control" id="exampleSelect1">
-            <option>city 1</option>
-            <option>city 2</option>
-            <option>city 3</option>
-            <option>city 4</option>
-            <option>city 5</option>
-          </select>
-        </div>
-        <div class="form-group">
-          <label for="exampleTextarea">Description</label>
-          <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
-        </div>
-        <div class="form-group">
-          <div class="input-group mb-3">
-            <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile02">
-              <label class="custom-file-label" for="inputGroupFile02">Choose avatar</label>
-            </div>
-            <div class="input-group-append">
-              <span class="input-group-text">Upload</span>
-            </div>
-          </div>
-        </div>
-        <div class="form-group">
-          <div class="input-group mb-3">
-            <div class="custom-file">
-              <input type="file" class="custom-file-input" id="inputGroupFile02">
-              <label class="custom-file-label" for="inputGroupFile02">Choose picture</label>
-            </div>
-            <div class="input-group-append">
-              <span class="input-group-text">Upload</span>
-            </div>
-          </div>
-        </div>
-        <fieldset class="form-group">
-          <legend>Conditions d'utilisation</legend>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" value="" checked="">
-              J'ai lu et j'accepte blablabla
-            </label>
-          </div>
-          <div class="form-check disabled">
-            <label class="form-check-label">
-              <input class="form-check-input" type="checkbox" value="" disabled="">
-              Option two is disabled
-            </label>
-          </div>
-        </fieldset>
-        <div class="form-group has-success">
-          <label class="form-control-label" for="inputValid">Valid input</label>
-          <input type="text" value="correct value" class="form-control is-valid" id="inputValid">
-          <div class="valid-feedback">Success! You've done it.</div>
-        </div>
-        <div class="form-group has-danger">
-          <label class="form-control-label" for="inputInvalid">Invalid input</label>
-          <input type="text" value="wrong value" class="form-control is-invalid" id="inputInvalid">
-          <div class="invalid-feedback">Sorry, that username's taken. Try another?</div>
-        </div>
-        <div class="form-group">
-          <label class="control-label">Input addons</label>
-          <div class="form-group">
-            <div class="input-group mb-3">
-              <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
-              <div class="input-group-append">
-                <span class="input-group-text">$
-                </span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary">Envoyer</button>
+        <br/>
+        <button type="submit" class="btn btn-dark">Envoyer</button>
       </fieldset>
     </form>
   </div>
 </body>
+</html>
