--- a/app/views/copain/index.html.erb
+++ b/app/views/copain/index.html.erb
@@ -18,4 +18,6 @@
   <%= link_to "Comments", copain_comments_path, class: "btn btn-primary" %><br/>
   <br/>
   <%= link_to "Showpage", copain_showpage_path, class: "btn btn-primary" %><br/>
+  <br/>
+  <%= link_to "present_element", copain_present_element_path, class: "btn btn-primary" %><br/>
 </div>
