--- a/app/views/copain/registration_form.html.erb
+++ b/app/views/copain/registration_form.html.erb
@@ -1,7 +1,7 @@
 <!-- Formulaires -->
 <body>
   <div class="container d-flex justify-content-center">
-    <form class="w-50 my-5 p-3">
+    <form class="w-50 my-5 p-5 bg-secondary text-white rounded">
       <fieldset>
         <legend>Inscription/Connexion</legend>
         <div class="form-group row">
