--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <%# navbar %>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
       <a class="navbar-brand" href="#">UI project</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -31,7 +31,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/copain/authentification_form">Forms</a>
           </li>
-          <%# <li class="nav-item">
+          <li class="nav-item">
             <a class="nav-link" href="/copain/registration_form">Registration</a>
           </li>
           <li class="nav-item">
@@ -39,7 +39,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/copain/change_password">Change_password</a>
-          </li> %>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="/copain/banner">Banner</a>
           </li>
