--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,6 +49,12 @@
           <li class="nav-item">
             <a class="nav-link" href="/copain/comments">Comments</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/copain/showpage">Show page</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/copain/present_element">Present element</a>
+          </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search">
