--- a/app/views/copain/ui_template.html.erb
+++ b/app/views/copain/ui_template.html.erb
@@ -1,10 +1,11 @@
   <body>
   <div class="container">
-    <div class="page-header" id="banner">
+    <div class="page-header m-2" id="banner">
       <div class="row">
         <div class="col-lg-8 col-md-7 col-sm-6">
           <h1>Solar</h1>
           <p class="lead">A spin on Solarized</p>
+          <p>https://bootswatch.com/solar/</p>
         </div>
         <div class="col-lg-4 col-md-5 col-sm-6">
           <div class="sponsor">
@@ -15,13 +16,14 @@
     </div>
     <!-- Navbar
       ================================================== -->
-    <div class="bs-docs-section clearfix">
+    <br/>
+    <div class="bs-docs-section clearfix m-2">
       <div class="row">
         <div class="col-lg-12">
           <div class="page-header">
             <h1 id="navbars">Navbars</h1>
           </div>
-          <div class="bs-component">
+          <div class="bs-component m-2">
             <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
@@ -61,7 +63,7 @@
               </div>
             </nav>
           </div>
-          <div class="bs-component">
+          <div class="bs-component m-2">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +103,7 @@
               </div>
             </nav>
           </div>
-          <div class="bs-component">
+          <div class="bs-component m-2">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
               <a class="navbar-brand" href="#">Navbar</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
@@ -146,7 +148,8 @@
     </div>
     <!-- Buttons
       ================================================== -->
-    <div class="bs-docs-section">
+    <br/>
+    <div class="bs-docs-section m-2">
       <div class="page-header">
         <div class="row">
           <div class="col-lg-12">
@@ -224,7 +227,7 @@
               </div>
             </div>
           </div>
-          <div class="bs-component">
+          <div class="bs-component m-2">
             <button type="button" class="btn btn-primary btn-lg">Large button</button>
             <button type="button" class="btn btn-primary">Default button</button>
             <button type="button" class="btn btn-primary btn-sm">Small button</button>
@@ -260,7 +263,7 @@
               </label>
             </div>
           </div>
-          <div class="bs-component">
+          <div class="bs-component m-2">
             <div class="btn-group-vertical">
               <button type="button" class="btn btn-primary">Button</button>
               <button type="button" class="btn btn-primary">Button</button>
@@ -300,6 +303,7 @@
     </div>
     <!-- Typography
       ================================================== -->
+    <br/>
     <div class="bs-docs-section">
       <div class="row">
         <div class="col-lg-12">
@@ -308,6 +312,7 @@
           </div>
         </div>
       </div>
+      <br/>
       <!-- Headings -->
       <div class="row">
         <div class="col-lg-4">
@@ -348,6 +353,7 @@
           </div>
         </div>
       </div>
+      <br/>
       <!-- Blockquotes -->
       <div class="row">
         <div class="col-lg-12">
@@ -381,6 +387,7 @@
         </div>
       </div>
     </div>
+    <br/>
     <!-- Tables
       ================================================== -->
     <div class="bs-docs-section">
@@ -467,6 +474,7 @@
         </div>
       </div>
     </div>
+    <br/>
     <!-- Forms
       ================================================== -->
     <div class="bs-docs-section">
@@ -685,6 +693,7 @@
         </div>
       </div>
     </div>
+    <br/>
     <!-- Navs
       ================================================== -->
     <div class="bs-docs-section">
@@ -889,6 +898,7 @@
     </div>
     <!-- Indicators
       ================================================== -->
+    <br/>
     <div class="bs-docs-section">
       <div class="row">
         <div class="col-lg-12">
@@ -987,6 +997,7 @@
     </div>
     <!-- Progress
       ================================================== -->
+    <br/>
     <div class="bs-docs-section">
       <div class="row">
         <div class="col-lg-12">
@@ -1051,6 +1062,7 @@
     </div>
     <!-- Containers
       ================================================== -->
+    <br/>
     <div class="bs-docs-section">
       <div class="row">
         <div class="col-lg-12">
@@ -1295,6 +1307,7 @@
     </div>
     <!-- Dialogs
       ================================================== -->
+    <br/>
     <div class="bs-docs-section">
       <div class="row">
         <div class="col-lg-12">
